--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>The Aviation Guy</title>
-        <link rel="stylesheet" href="/general.css">
-        <link rel="stylesheet"  href="/nav-bar.css">
-        <link rel="stylesheet" href="/main-page.css">
+        <link rel="stylesheet" href="general.css">
+        <link rel="stylesheet"  href="nav-bar.css">
+        <link rel="stylesheet" href="main-page.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -19,9 +19,9 @@
     <body>
         <nav>
             <div class="nav-logo">
-                <img src="/Icons/aeroplane.png">
+                <img src="Icons/aeroplane.png">
                 <span>The Aviation Guy</span>
-                <img class="foot-print" src="/Icons/mountain-range.png">
+                <img class="foot-print" src="Icons/mountain-range.png">
             </div>
             <div class="nav-menu">
                 <div class="nav-menu-items">Home</div>
@@ -33,7 +33,7 @@
             </div>
         </nav>
         <section class="main-page-image">
-            <img src = "/Photos/_03A6392.jpg">
+            <img src = "Photos/_03A6392.jpg">
             <div class="main-page-image-location-info">Sankri Base camp</div>
         </section>
     </body>
