--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
         <section class="main-page-image">
-            <img src = "Photos/03A6392.JPG">
+            <img src = "Photos/pic.jpg">
             <div class="main-page-image-location-info">Sankri Base camp</div>
         </section>
     </body>
